[package]
name = "molysite"
version = "0.1.0"
edition = "2021"
authors = ["Pauli Jaakkola"]
description = "An implementation of the algorithmic language Scheme"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.0.18", features = ["derive"] }
pretty = "0.11.3"
rustyline = "10.0.0"

[lib]
name = "molysite"
path = "src/lib.rs"

[[bin]]
name = "molysite"
path = "src/main.rs"
