[package]
name = "puff"
version = "0.1.0"
edition = "2021"
authors = ["Pauli Jaakkola"]
description = "An implementation of the algorithmic language Scheme"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
libc = "0.2.137"
nix = "0.25.0"
pretty = "0.11.3"
clap = { version = "4.0.18", features = ["derive"] }
rustyline = "10.0.0"

[dev-dependencies]
quickcheck = "1"
quickcheck_macros = "1"

[lib]
name = "puff"
path = "src/lib.rs"

[[bin]]
name = "puff"
path = "src/main.rs"
